cc/hehe_report.txt
vectorization.cpp:2:12: error: ‘x’ was not declared in this scope
 int peel = x & 0x0f;
            ^
vectorization.cpp:3:1: error: expected unqualified-id before ‘if’
 if (peel != 0) {
 ^~
vectorization.cpp:10:4: error: expected unqualified-id before ‘for’
    for (i = peel; i < 1024; i++) { x[i] = 1; }
    ^~~
vectorization.cpp:10:19: error: ‘i’ does not name a type
    for (i = peel; i < 1024; i++) { x[i] = 1; }
                   ^
vectorization.cpp:10:29: error: ‘i’ does not name a type
    for (i = peel; i < 1024; i++) { x[i] = 1; }
                             ^
